# Deterministic-AI-Debate

./: .env  .env-example  .gitignore  CLAUDE.md  README.md  debate_systems_research.json  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: logging_config.json  rate_limits.json  setup.json  topics.json  visualization_config.json
docs/: PLAN.md  PRD.md  PRD_advanced_features.md  PRD_finops.md  PRD_gatekeeper.md  PRD_logging.md  PRD_plugins_and_packaging.md  PRD_tiebreaker.md  PRD_watchdog.md  PROMPTS.md  TODO.md
src/debate/: __init__.py  analysis.py  config.py  sdk.py  sensitivity_runner.py
src/debate/agents/: __init__.py  base.py  con.py  fact_checker.py  pro.py
src/debate/benchmarks/: __init__.py  reporter.py
src/debate/cli/: __init__.py  entry.py  forecaster.py  handlers.py  menu.py
src/debate/engine/: __init__.py  agents_factory.py  embeddings.py  ledger.py  pipeline.py
src/debate/evaluation/: __init__.py  discourse.py  judge.py  responsiveness.py  semantic_drift.py
src/debate/events/: __init__.py  bus.py  types.py
src/debate/gatekeeper/: __init__.py  config.py  gatekeeper.py  watchdog.py
src/debate/logging/: __init__.py  logger.py
src/debate/router/: __init__.py  skills.py
src/debate/schemas/: __init__.py  claim.py  round.py  verdict.py
src/debate/sdk/: sdk.py
src/debate/shared/: __init__.py  logger.py
src/debate/tools/: __init__.py  search.py
tests/: test_analysis.py  test_chaos.py  test_cli.py  test_discourse.py  test_embeddings.py  test_events.py  test_forecaster.py  test_gatekeeper.py  test_gatekeeper_queue_behavior.py  test_logger.py  test_responsiveness.py  test_schemas.py  test_sdk.py  test_search.py  test_shared_logger.py  test_watchdog.py
tests/unit/debate/: test_sensitivity.py
tests/unit/debate/agents/: test_fact_checker.py
tests/unit/debate/cli/: test_forecaster.py
tests/unit/debate/engine/: test_embeddings.py  test_ledger.py  test_parallel_benchmarks.py  test_pipeline.py  test_progress.py
tests/unit/debate/evaluation/: test_semantic_drift.py
tests/unit/debate/gatekeeper/: test_gatekeeper_queue_structure.py
tests/unit/debate/router/: test_router.py
tests/unit/debate/sdk/: test_sdk.py
tests/unit/debate/shared/: test_shared_logger.py
